# expand-diplomatic

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  demo_latin.xml  demo_latin_ollama.xml  demo_latin_rules.xml  docker-entrypoint.sh  examples.json  gui.py  pyproject.toml  requirements.txt  run-container.sh  run_gemini.py  sample.xml  sample_expanded.xml  sample_page.xml  sample_page_expanded.xml
.cursor/rules/: commit-main-when-prompted.mdc  project-purpose.mdc
.github/workflows/: build.yml
docs/: BUILDING.md  CODE_REVIEW.md  DEBUG_REVIEW.md  DESIGN.md  FEATURES_AND_DOCS.md  FREE_API_KEY_SPEED.md  GUI_REVIEW.md  MODEL_CAPABILITIES.md  RELEASE_READINESS.md  SPEED_EFFICIENCY.md  WINDOWS_STABILITY.md
expand_diplomatic/: __init__.py  __main__.py  _version.py  config_paths.py  examples_io.py  expander.py  gemini_models.py  gpu_detect.py  learning.py  local_llm.py
scripts/: build-all.sh  build-container-installs.sh  build-deb.sh  build-docker.sh  build-macos-app.sh  build-packages.sh  build-rpm.sh  build-windows-msi.bat  build-windows-msi.sh  build-windows-zip.bat  build-windows-zip.sh  expand_deeds_batch.sh  test_expand_one.sh
tests/: __init__.py  test_expander.py  test_run_gemini.py
