[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expand-diplomatic"
version = "0.3.4"
description = "Expand diplomatic transcriptions to full form via Gemini API"
# SPDX license expression (PEP 639)
license = "MIT"
license-files = ["LICENSE"]
# Semantic Versioning: https://semver.org — keep in sync with expand_diplomatic/_version.py
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0,<2.0.0",
    "lxml>=5.0.0,<7.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "Pillow>=10.0.0,<12.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0,<2",
    "pytest>=7.0.0",
    "wheel",
]
# Optional: cleaner Dock/taskbar name (pip install expand-diplomatic[dock])
dock = [
    "setproctitle>=1.3.0",
]

[project.scripts]
expand-diplomatic = "expand_diplomatic.__main__:main"
expand-diplomatic-gui = "gui:main"


[tool.setuptools]
py-modules = ["run_gemini", "gui"]
packages = ["expand_diplomatic"]

